refactoring rebalance basket